fix metric link on mobile

--- a/client/src/dashboard/styles/pages/_dashboards-index.scss
+++ b/client/src/dashboard/styles/pages/_dashboards-index.scss
@@ -14,6 +14,10 @@
       font-weight: 700;
       border-bottom: 0;
       text-decoration: underline;
+
+      @media(max-width: $screen-sm) {
+        margin-left: -15px;
+      }
     }
   }
 
